# APT_Assignment_1

./: CMakeLists.txt  converted1.xlsx  data1.csv  main.cpp  runscript.sh
data/: data3.csv  data4.csv  data5.csv
datasets/: data1.csv  data3.csv
headers/: descriptive_statistics.h  file.h  helper_functions.h  helpers.h  inferential_statistics.h  main_driver_function.h  merge_sort.h  test_functions.h  validation.h
source/: descriptive_statistics.cpp  file.cpp  helpers.cpp  inferential_statistics.cpp  main_driver_function.cpp  merge_sort.cpp  test_functions.cpp  validation.cpp
